--- a/preppal-fe/src/styles/recipe.css
+++ b/preppal-fe/src/styles/recipe.css
@@ -1,9 +1,39 @@
-li {
-    padding-bottom: 5px;
+.items li {
+    max-width: 600x;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    list-style-position: inside;
+}
+
+.items li:hover {
+    overflow: visible;
+    white-space: normal;
+    height: auto;
+    word-wrap: break-word;
 }
 
 .list {
-    padding-left: 4em;
+    width: 100%;
+}
+
+.recipe-header {
+    display: flex;
+    padding-bottom: 20px;
+}
+
+.recipe-header-row {
+    max-width: 425px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.recipe-header-row:hover {
+    overflow: visible;
+    white-space: normal;
+    height: auto;
+    word-wrap: break-word;
 }
 
 .recipe-info-attr {
